XmlParser/src/javacc/parsexml/XTMParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. XTMParser.java */
package javacc.parsexml;

import java.io.*;
import javacc.structure.*;

public class XTMParser/*@bgen(jjtree)*/implements XTMParserTreeConstants, XTMParserConstants {/*@bgen(jjtree)*/
  protected static JJTXTMParserState jjtree = new JJTXTMParserState();private static boolean verboseParser; //verbose option on/off
  // Main used for parser debug purpose
  /** Use main only for debug
	* @param args arg[0] must contain full path of xtm file
	*/
  public static void main(String args []) throws Exception
  {
        //Debug - > Always verbose
        verboseParser = true;

        //FILE STREAM
        FileInputStream in = null;
        try {
          //Need file to parse...
          if(args.length<1) throw (new Exception("Full file path missing..."));
          String fileName = args[0];

          //Pre-process the input file
          File processedFile = new File (fileName+"_reloaded.xtm");
          String cmdLine = "native2ascii -encoding utf8 " + new File(fileName) + " " + processedFile;
          Process jdkProc = null;
      try {
        jdkProc = Runtime.getRuntime().exec(cmdLine);
        jdkProc.waitFor();
          } catch (InterruptedException ie) {
            ie.printStackTrace();
          }
          System.out.println("File preprocessed.");

          in = new FileInputStream(processedFile.getPath());
          System.out.println("Now parsing " + fileName);
          new XTMParser(in);

          try {
                //START PARSING
                XTM xtm = XTMParser.start();

                //Generate LOG
                xtm.print(fileName+"-LOG.txt");
          } catch (Exception e) {
                System.out.println("Oops.");
                System.out.println(e.getMessage());
          }

        } catch (Exception e) {
                System.out.println("Oops.");
                System.out.println(e.getMessage());
        } finally {
                if (in != null)
                        in.close();
    }
  }

  // Function for library purpose
  /** Parse an XTM File into an {@link XTM} object 
	* @param fullPathFileName Must contain full path of xtm file
	* @param verboseOption Set it to TRUE if you want to print actions
	*/
  public static XTM parse(String fullPathFileName, boolean verboseOption) throws Exception
  {
        if(verboseOption) verboseParser = true; else verboseParser = false;

        FileInputStream in = null;
        XTM xtm = null;

        try {
          //Need file to parse...
          if(fullPathFileName==null || fullPathFileName.isEmpty()) throw (new Exception("Full file path missing..."));
          String fileName = fullPathFileName;

          File processedFile = new File (fileName+"_reloaded.xtm");
          String cmdLine = "native2ascii -encoding utf8 " + new File(fileName) + " " + processedFile;
          Process jdkProc = null;
      try {
        jdkProc = Runtime.getRuntime().exec(cmdLine);
        jdkProc.waitFor();
          } catch (InterruptedException ie) {
            ie.printStackTrace();
          }
          System.out.println("File preprocessed.");

          //Load file
          in = new FileInputStream(processedFile);
          System.out.println("Now parsing " + fileName);
          new XTMParser(in);

          try {
                //START PARSING
                xtm = XTMParser.start();

                //Generate LOG
                xtm.print(fileName+"-LOG.txt");

          } catch (Exception e) {
                System.out.println("Oops.");
                System.out.println(e.getMessage());
          }

        } catch (Exception e) {
                System.out.println("Oops.");
                System.out.println(e.getMessage());
        } finally {
                if (in != null)
                        in.close();
    }

    //Return XTM Structure
        return xtm;
  }

/* PARSER START POINT */
  @SuppressWarnings("unused")
static final public XTM start() throws ParseException {
 /*@bgen(jjtree) start */
        SimpleNode jjtn000 = new SimpleNode(JJTSTART);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);XTM xtmFile;
    try {
      jj_consume_token(FILE_START);
      xtmFile = parseXTM();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    System.out.println("PARSING PROCESS OK");
    {if (true) return xtmFile;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  @SuppressWarnings("unused")
static final public XTM parseXTM() throws ParseException {
 /*@bgen(jjtree) parseXTM */
        SimpleNode jjtn000 = new SimpleNode(JJTPARSEXTM);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);XTM x = new XTM();
        TopicMap tm = new TopicMap();
    try {
      jj_consume_token(START_TOPIC_MAP);
      parseTopicMap(tm);
      jj_consume_token(END_TOPIC_MAP);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    x.setTopicMap(tm, false);
    {if (true) return x;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void parseTopicMap(TopicMap topicMap) throws ParseException {
 /*@bgen(jjtree) parseTopicMap */
        SimpleNode jjtn000 = new SimpleNode(JJTPARSETOPICMAP);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);TopicMap tm = topicMap;
        Topic topic = new Topic();
        Association association = new Association();

        String topicId;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case START_TOPIC:
        jj_consume_token(START_TOPIC);
        topicId = parseTopicID();
        jj_consume_token(41);
        parseTopic(topic);
        jj_consume_token(END_TOPIC);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case START_TOPIC:
        case START_ASSOCIATION:
          parseTopicMap(tm);
          break;
        default:
          jj_la1[0] = jj_gen;
          ;
        }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    topic.setTopicID(topicId);
        tm.putTopic(topic);
        break;
      case START_ASSOCIATION:
        jj_consume_token(START_ASSOCIATION);
        parseAssociation(association);
        jj_consume_token(END_ASSOCIATION);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case START_TOPIC:
        case START_ASSOCIATION:
          parseTopicMap(tm);
          break;
        default:
          jj_la1[1] = jj_gen;
          ;
        }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    tm.putAssociation(association);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/* TOKEN */
  static final public void parseTopic(Topic topic) throws ParseException {
 /*@bgen(jjtree) parseTopic */
        SimpleNode jjtn000 = new SimpleNode(JJTPARSETOPIC);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Topic t = topic;
        String subjectLocator;
        String subjectIdentifier;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case START_SUBJECT_LOCATOR:
        jj_consume_token(START_SUBJECT_LOCATOR);
        subjectLocator = parseTopicSubjLoc();
        jj_consume_token(TAG_END);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case START_SUBJECT_LOCATOR:
        case START_SUBJECT_IDENTIFIER:
        case START_INSTANCE_OF:
        case START_NAME:
        case START_OCCURENCE:
          parseTopic(t);
          break;
        default:
          jj_la1[3] = jj_gen;
          ;
        }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    if(verboseParser) System.out.println("TopicSubjLoc found");
        t.addTopicSubjectLocator(subjectLocator);
        break;
      case START_SUBJECT_IDENTIFIER:
        jj_consume_token(START_SUBJECT_IDENTIFIER);
        subjectIdentifier = parseTopicSubjIdentif();
        jj_consume_token(TAG_END);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case START_SUBJECT_LOCATOR:
        case START_SUBJECT_IDENTIFIER:
        case START_INSTANCE_OF:
        case START_NAME:
        case START_OCCURENCE:
          parseTopic(t);
          break;
        default:
          jj_la1[4] = jj_gen;
          ;
        }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    if(verboseParser) System.out.println("TopicSubjectIdentifier found");
        t.addTopicSubjectIdentifier(subjectIdentifier);
        break;
      case START_INSTANCE_OF:
        jj_consume_token(START_INSTANCE_OF);
        parseTopicIstanceOf(t);
        jj_consume_token(END_INSTANCE_OF);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case START_SUBJECT_LOCATOR:
        case START_SUBJECT_IDENTIFIER:
        case START_INSTANCE_OF:
        case START_NAME:
        case START_OCCURENCE:
          parseTopic(t);
          break;
        default:
          jj_la1[5] = jj_gen;
          ;
        }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
        if(verboseParser) System.out.println("TopicIstanceOf found");
        break;
      case START_NAME:
        jj_consume_token(START_NAME);
        parseTopicName(t);
        jj_consume_token(END_NAME);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case START_SUBJECT_LOCATOR:
        case START_SUBJECT_IDENTIFIER:
        case START_INSTANCE_OF:
        case START_NAME:
        case START_OCCURENCE:
          parseTopic(t);
          break;
        default:
          jj_la1[6] = jj_gen;
          ;
        }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
        //OK... passo topic, oggetto manipolato per riferimento
        if(verboseParser) System.out.println("TopicName found");
        break;
      case START_OCCURENCE:
        jj_consume_token(START_OCCURENCE);
        parseTopicOccurence(t, null);
        jj_consume_token(END_OCCURENCE);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case START_SUBJECT_LOCATOR:
        case START_SUBJECT_IDENTIFIER:
        case START_INSTANCE_OF:
        case START_NAME:
        case START_OCCURENCE:
          parseTopic(t);
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    if(verboseParser) System.out.println("TopicOccurrence found");
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void parseTopicIstanceOf(Topic topic) throws ParseException {
 /*@bgen(jjtree) parseTopicIstanceOf */
  SimpleNode jjtn000 = new SimpleNode(JJTPARSETOPICISTANCEOF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Topic t = topic;
  String idTopicRefInstanceOf;
    try {
      jj_consume_token(START_TOPIC_REF);
      idTopicRefInstanceOf = parseTopicID();
      jj_consume_token(TAG_END);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case START_TOPIC_REF:
        parseTopicIstanceOf(t);
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    if(verboseParser) System.out.println("TopicIstanceOf found");
    t.addTopicInstanceOf(idTopicRefInstanceOf);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void parseTopicName(Topic topic) throws ParseException {
 /*@bgen(jjtree) parseTopicName */
  SimpleNode jjtn000 = new SimpleNode(JJTPARSETOPICNAME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Topic t = topic;
  TopicName tn = t.getTopicName();
  if(tn == null) {
        tn = t.getNewTopicName();
  }
  String topicNameValue;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case START_VALUE:
        jj_consume_token(START_VALUE);
        topicNameValue = parseNameValue();
        jj_consume_token(END_VALUE);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case START_VARIANT:
        case START_VALUE:
          parseTopicName(t);
          break;
        default:
          jj_la1[10] = jj_gen;
          ;
        }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    if(verboseParser) System.out.println("TopicNameValue found");
    tn.setTopicNameValue(topicNameValue);
        break;
      case START_VARIANT:
        jj_consume_token(START_VARIANT);
        parseNameVariant(t, null);
        jj_consume_token(END_VARIANT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case START_VARIANT:
        case START_VALUE:
          parseTopicName(t);
          break;
        default:
          jj_la1[11] = jj_gen;
          ;
        }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
        if(verboseParser) System.out.println("TopicNameVariant found");
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void parseNameVariant(Topic topic, TopicNameVariant tnv) throws ParseException {
 /*@bgen(jjtree) parseNameVariant */
  SimpleNode jjtn000 = new SimpleNode(JJTPARSENAMEVARIANT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Topic t = topic;
  TopicNameVariant topicNameVariant = tnv;
  if(topicNameVariant == null) {
    topicNameVariant = t.getNewTopicNameVariant(); //ritorna il riferimento
  }
  String resourceData;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case START_SCOPE:
        jj_consume_token(START_SCOPE);
        parseTopicNameVariantScope(topicNameVariant);
        jj_consume_token(END_SCOPE);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case START_SCOPE:
        case START_RESOURCE_DATA:
          parseNameVariant(t, topicNameVariant);
          break;
        default:
          jj_la1[13] = jj_gen;
          ;
        }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
